# dotfiles

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  README.zh-cn.md  biome.jsonc  bootstrap.sh  bootstrap_mac.sh  bootstrap_macos.sh  bootstrap_raspberry.sh  mise.toml  pyproject.toml
.github/workflows/: ci.yml  ci_ linux.yml  ci_linux.yml  ci_mac.yml
.mise/: config.toml
.mise/scripts/: common.sh  mackup-lib.sh  mackup.sh  restore.sh  sync.sh  task-lib.sh
.mise/tasks/: _lib.sh  agents.sh  backup.sh  build-atuin.sh  init.sh  lint.sh  restore.sh  sync-completion.sh  sync.sh  up.sh  zsh-profile.sh
assets/brew/: Brewfile  BrewfileDev  brew_dev.txt
assets/cargo/: cargo.txt
assets/iterm2/: com.googlecode.iterm2.plist
assets/km/: km.kmsync
assets/mackup/: .bash_profile  .bashrc  .condarc  .gitconfig  .gitignore  .ideavimrc  .p10k.zsh  .profile  .requirements.txt  .rgignore  .spacemacs  .tmux.conf.local  .tool-versions  .zprofile  .zshrc
assets/macos/: macos.txt
assets/npm/: npm.txt  npm_dev.txt
assets/others/: surfingkeys.js
assets/pipx/: pipx.txt
assets/setapp/: setapp.txt
assets/vscode/: vscode.txt
config/: espanso
config/brew/: 220204  220207  Brewfile
config/espanso/: default.yml
config/pipx/: pipx
home/: .bunfig.toml  .fdignore  .gitcommit  .gitconfig  .gitignore  .npmrc  .tmux.conf  .vimrc  .yarnrc.yml  .zprofile  .zshenv  .zshenv.private.tpl.zsh  .zshenv.tpl  .zshrc
mackup/: .condarc  .fdignore  .gitconfig  .gitignore  .rgignore  .zprofile  .zshenv  .zshrc  mackup.cfg
modules/: AGENTS.md
reference/: .bunfig.toml  .gitcommit  .gitconfig  .rgignore  .tmux.conf  .vimrc  .yarnrc.yml  .zshenv  .zshenv.private.tpl.zsh
scripts/: __init__.py  adopt.py  bootstrap.sh  bootstrap_ci.sh  bootstrap_linux.sh  bootstrap_mac.sh  bootstrap_mac_ci.sh  bootstrap_raspberry.sh  check.py  check_macos.py  check_mise.py  check_skillshare.py  codex  d  dateutc  diff.py  inventory.py  link.py  lint.py  mise.py  mise_sync.py  models.py  o  pmt.py  profiles.py  render.py  restore.py  runtime.py  scratch  setup.py  shell.py  ttok.py  update.py  zsh-profile
test/: test_ci.sh  test_mac.sh
tests/: conftest.py  test_adopt.py  test_check.py  test_ci.sh  test_cli.py  test_diff.py  test_inventory.py  test_lint.py  test_mac.sh  test_mise_sync.py  test_modules.py  test_render.py  test_restore.py  test_runtime.py  test_setup.py  test_shell.py  test_update.py
(+376 files in other folders)
